src/objects/Return_CR_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Converted_Credit_Cost__c</fullName>
        <formula>IF(
    AND(
    Return_CR_Header__r.Vendor__r.Is_Foreign_Vendor__c,
    Return_CR_Header__r.FX_Conversion_Rate__c &lt;&gt; 0
    ),
    IF(
    $Setup.General_Configurations__c.Enable_Xero_Accounting__c,
    ((Credit_Cost__c * Return_Qty__c)
    /Return_CR_Header__r.Backward_Conversion_Rate__c),
    Credit_Cost__c * Return_Qty__c
    *Return_CR_Header__r.FX_Conversion_Rate__c
    ),
    Credit_Cost__c * Return_Qty__c
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Credit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Credit_Cost__c</fullName>
        <label>Credit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Desc__c</fullName>
        <formula>Item__c +&quot; - &quot; + Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item/Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Return CR Line Items</relationshipLabel>
        <relationshipName>Return_CR_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_CR_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return CR Header</label>
        <referenceTo>Return_CR_Header__c</referenceTo>
        <relationshipLabel>Return CR Line Items</relationshipLabel>
        <relationshipName>Return_CR_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Return_Cost__c</fullName>
        <label>Return Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Return_Qty__c</fullName>
        <label>Return Qty</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Return CR Line Item</label>
    <nameField>
        <displayFormat>RTNCRLI-{00000000}</displayFormat>
        <label>Return CR Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Return CR Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>